Move the stopwatch to the content div and remove overflow: hidden

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -4,7 +4,8 @@ html {
   box-sizing: border-box;
   height: 100%;
   width: 100%;
-  overflow-x: hidden;
+  overflow: visible;
+  // overflow-x: hidden;
 }
 
 *,
